Almost completed the transition from HETreeNode to Base_TN

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -87,16 +87,16 @@
     <Compile Include="BaseClasses\Json_FileCollection.cs" />
     <Compile Include="BaseClasses\Json_File_UI.cs" />
     <Compile Include="BaseClasses\OrbitalData.cs" />
-    <Compile Include="Blueprints\BlueprintDataView_TreeNode.cs" />
+    <Compile Include="Blueprints\BlueprintDataView_TN.cs" />
     <Compile Include="Blueprints\BlueprintDockingPort_TN.cs" />
     <Compile Include="Blueprints\BlueprintsHandler.cs" />
     <Compile Include="Blueprints\BlueprintsHandler_UI.cs" />
     <Compile Include="Blueprints\BlueprintStructure_TN.cs" />
+    <Compile Include="Blueprints\BlueprintsView_TN.cs" />
     <Compile Include="Blueprints\Blueprint_FileCollection.cs" />
     <Compile Include="Blueprints\Blueprint_FileCollection_TN.cs" />
     <Compile Include="Blueprints\Blueprint_TN.cs" />
-    <Compile Include="Blueprints\HEBlueprintHierarchyViewTreeNode.cs" />
-    <Compile Include="Blueprints\HEBlueprintsViewTreeNode.cs" />
+    <Compile Include="Blueprints\HierarchyView_TN.cs" />
     <Compile Include="Blueprints\OLD_BlueprintStructureDefinitions.cs" />
     <Compile Include="Blueprints\StaticDataHelper.cs" />
     <Compile Include="Blueprints\StationBlueprint.cs" />
@@ -106,16 +106,15 @@
     <Compile Include="Document\GameData.cs" />
     <Compile Include="Document\GameSave_Json_File.cs" />
     <Compile Include="Document\GuidManager.cs" />
-    <Compile Include="Document\Json_TreeNode.cs" />
+    <Compile Include="Document\Json_TN.cs" />
     <Compile Include="Document\SolarSystem.cs" />
     <Compile Include="Document\SolarSystem_TreeNode.cs" />
     <Compile Include="Document\SolarSystem_TreeNode_Sorter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="BaseClasses\HETreeNode.cs" />
     <Compile Include="BaseClasses\HETreeNodeType.cs" />
     <Compile Include="Search\SearchHandler.cs" />
-    <Compile Include="Search\SearchHandler_TreeNode.cs" />
     <Compile Include="EmbeddedImages\EmbeddedImages_ImageList.cs" />
+    <Compile Include="Search\SearchHandler_TN.cs" />
     <Compile Include="UI\Base_TN.cs" />
     <Compile Include="Utilities\EnumExtensions.cs" />
     <Compile Include="Utilities\General.cs" />
