--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -83,24 +83,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blueprints\StationBlueprint.BlueprintDockingPort.cs" />
+    <Compile Include="Blueprints\StationBlueprint.BlueprintStructure.cs" />
+    <Compile Include="Blueprints\StationBlueprint.BlueprintStructure_AuxData.cs" />
     <Compile Include="StaticData\AuthorisedPerson.cs" />
     <Compile Include="StaticData\DockingPortHelper.cs" />
+    <Compile Include="StaticData\DockingPortType.cs" />
     <Compile Include="StaticData\StructureSceneID.cs" />
     <Compile Include="UI\Base_TN_NodeType.cs" />
     <Compile Include="BaseClasses\Json_File.cs" />
     <Compile Include="BaseClasses\Json_FileCollection.cs" />
     <Compile Include="BaseClasses\Json_File_UI.cs" />
     <Compile Include="BaseClasses\OrbitalData.cs" />
-    <Compile Include="Blueprints\BlueprintDataView_TN.cs" />
-    <Compile Include="Blueprints\BlueprintDockingPort_TN.cs" />
+    <Compile Include="Blueprints\UI\BlueprintDataView_TN.cs" />
+    <Compile Include="Blueprints\UI\BlueprintDockingPort_TN.cs" />
     <Compile Include="Blueprints\BlueprintsHandler.cs" />
-    <Compile Include="Blueprints\BlueprintsHandler_UI.cs" />
-    <Compile Include="Blueprints\BlueprintStructure_TN.cs" />
-    <Compile Include="Blueprints\BlueprintsView_TN.cs" />
+    <Compile Include="Blueprints\UI\BlueprintsHandler_UI.cs" />
+    <Compile Include="Blueprints\UI\BlueprintStructure_TN.cs" />
+    <Compile Include="Blueprints\UI\BlueprintsView_TN.cs" />
     <Compile Include="Blueprints\Blueprint_FileCollection.cs" />
-    <Compile Include="Blueprints\Blueprint_FileCollection_TN.cs" />
-    <Compile Include="Blueprints\Blueprint_TN.cs" />
-    <Compile Include="Blueprints\HierarchyView_TN.cs" />
+    <Compile Include="Blueprints\UI\Blueprint_FileCollection_TN.cs" />
+    <Compile Include="Blueprints\UI\Blueprint_TN.cs" />
+    <Compile Include="Blueprints\UI\HierarchyView_TN.cs" />
     <Compile Include="Blueprints\StationBlueprint.cs" />
     <Compile Include="Blueprints\StationBlueprint_File.cs" />
     <Compile Include="Blueprints\StructureDefinitions_File.cs" />
@@ -263,7 +267,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
