--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -98,9 +98,7 @@
     <Compile Include="Blueprints\UI\BlueprintDataView_TN.cs" />
     <Compile Include="Blueprints\UI\BlueprintDockingPort_TN.cs" />
     <Compile Include="Blueprints\BlueprintsHandler.cs" />
-    <Compile Include="Blueprints\UI\BlueprintsHandler_UI.cs" />
     <Compile Include="Blueprints\UI\BlueprintStructure_TN.cs" />
-    <Compile Include="Blueprints\UI\BlueprintsView_TN.cs" />
     <Compile Include="Blueprints\Blueprint_FileCollection.cs" />
     <Compile Include="Blueprints\UI\Blueprint_FileCollection_TN.cs" />
     <Compile Include="Blueprints\UI\Blueprint_TN.cs" />
@@ -267,7 +265,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
