--- a/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
+++ b/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StationBlueprintEditorForm.cs">
       <SubType>Form</SubType>
