--- a/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
+++ b/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlueprintPropertiesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BlueprintPropertiesForm.Designer.cs">
+      <DependentUpon>BlueprintPropertiesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StationBlueprintEditorForm.cs">
@@ -62,6 +68,9 @@
       <DependentUpon>StationBlueprintEditorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="StationBlueprintEditorProgram.cs" />
+    <EmbeddedResource Include="BlueprintPropertiesForm.resx">
+      <DependentUpon>BlueprintPropertiesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
