FIX: Hellion 0.3 (Rude Awakening) seems to have switched to using the Player's GUID rather than the previously used FakeGUID foe the Player's ParentGUID when in space (not in a module).

--- a/HELLION.Explorer/HELLION.Explorer.csproj
+++ b/HELLION.Explorer/HELLION.Explorer.csproj
@@ -63,7 +63,7 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>HELLION.Explorer.ico</ApplicationIcon>
+    <ApplicationIcon>HellionExplorer.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -193,6 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="HELLION.Explorer.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="HellionExplorer.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
