--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -48,8 +48,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -111,7 +111,9 @@
     <Compile Include="Utilities\TreeNodeExtensions.cs" />
     <Compile Include="Utilities\UpdateChecker.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utilities\Settings\" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EmbeddedImages\Structures180x\STRUCT_AM.png" />
     <EmbeddedResource Include="EmbeddedImages\Structures180x\STRUCT_ARG.png" />
@@ -243,6 +245,7 @@
     <None Include="JsonSnippets\MatchToGUID.json" />
     <None Include="JsonSnippets\PathSearchExamples.json" />
     <None Include="JsonSnippets\PlayerPosition-ARG-Bridge.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
